# closernotes

./: Dockerfile  README.md  build.sh  pyproject.toml  start.sh  tailwind.config.js
app/: __init__.py  config.py  main.py  wsgi.py
app/api/: __init__.py  action_items.py  auth.py  crm.py  customers.py  followup.py  health.py  ingest.py  meetings.py  transcribe.py  ui.py  users.py
app/prompts/: __init__.py  customer.py  extraction.py  followup.py  orchestrator.py
app/schemas/: __init__.py  cache.py  crm.py  enums.py  ingest.py  meeting.py  teammate.py  user.py
app/services/: __init__.py  auth.py  backboard.py  cache.py  cache_store.py  crm.py  customer.py  meeting.py  newsboard.py  orchestrator.py  reports.py  teammate.py  transcription.py  user.py
app/static/css/: input.css  output.css
app/templates/: 404.html  500.html  action_item_detail.html  action_items.html  activities.html  activity_detail.html  all_activities.html  all_contacts.html  all_opportunities.html  base.html  contact_detail.html  contacts.html  customer.html  dashboard.html  ingest_report.html  login.html  manager.html  meeting.html  opportunities.html  opportunity_detail.html  signup.html
app/tools/: __init__.py  definitions.py
terraform/: apprunner.tf  backend.tf  ecr.tf  main.tf  outputs.tf  variables.tf
terraform/bootstrap/: state-bucket.tf
terraform/envs/: dev.tfvars  prod.tfvars  staging.tfvars
